# cte

./: .gitignore  CDTOP_results.csv  LICENSE  README.md  new_CDTOP_results.csv  p7.2.aR.csv  p7.2smalll.csv  pyproject.toml  pyvenv.cfg  requirements.txt  results_DOP.json  setup.cfg  setup.py  sweep.yml  tsp.py
archive/: README.md  sweep.yml
archive/TOP_solutions/: p4.2.a.json  p4.2.b.json  p4.2.c.json  p4.2.d.json  p4.2.e.json  p4.2.f.json  p4.2.g.json  p4.2.h.json  p4.2.i.json  p4.2.j.json  p4.2.k.json  p4.2.l.json  p4.2.m.json  p4.2.n.json  p4.2.o.json  p4.2.p.json  p4.2.q.json  p4.2.r.json  p4.2.s.json  p4.2.t.json  p4.3.a.json  p4.3.c.json  p4.3.d.json  p4.3.e.json  p4.3.f.json  p4.3.g.json  p4.3.h.json  p4.3.i.json  p4.3.j.json  p4.3.k.json  p4.3.l.json  p4.3.m.json  p4.3.n.json  p4.3.o.json  p4.3.p.json  p4.3.q.json  p4.3.r.json  p4.3.s.json  p4.3.t.json  p4.4.b.json  (+169 more)
courses/reinforcement_learning/: value_estimation.py
cte.egg-info/: PKG-INFO  SOURCES.txt
mads_kode/: import_TOP_instance.py  main.py
misc/: GameScenario.py  NavigationOptim.py  SensorPlacing.py  TOP_pyomo.py
misc/mads_kode/: OP_solver.py
misc/projects/: PGE.py
notes/: ideas.md
resources/CEDOPADS/: p4.0.txt  p4.1.txt  p4.10.txt  p4.11.txt  p4.12.txt  p4.13.txt  p4.14.txt  p4.15.txt  p4.16.txt  p4.17.txt  p4.18.txt  p4.19.txt  p4.2.txt  p4.20.txt  p4.21.txt  p4.22.txt  p4.23.txt  p4.24.txt  p4.25.txt  p4.26.txt  p4.27.txt  p4.28.txt  p4.29.txt  p4.3.txt  p4.30.txt  p4.31.txt  p4.32.txt  p4.33.txt  p4.34.txt  p4.35.txt  p4.36.txt  p4.37.txt  p4.38.txt  p4.39.txt  p4.4.a.a.a.txt  (+1305 more)
scripts/: convert_OP_to_CEDOPADS.py  convert_TOP_to_CPM_HTOP.py  convert_TOP_to_DTOPADS.py  solve_top_instances.py  test_dijskstra.py
source/: GreedyAlgorithm.py
(+2700 files in other folders)
