[metadata]
name = CTE
description = A computational testing environment for my PhD.
author = Martin Sig Nørbjerg
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
   classes 
   library
   misc
   utils
install_requires =
    numpy>=1.24
python_requires = >=3.9
package_dir =
    =source
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    mypy>=0.91

[flake8]
ignore = E501, D401
max-line-length = 160
